# auto-trader

./: .gitignore  colab_runner.ipynb  pyproject.toml  requirements.txt
.github/workflows/: check.yaml
common/: common_config.py  common_utils.py  config.py  test_common_utils.py
data/: .gitignore  config.py  get_raw.py  get_raw_data.ipynb  preprocess.py  process_data.ipynb  test_utils.py  utils.py
modeling/: cnn_utils.py  config.py  config.yaml  create_features-2.ipynb  create_features-3.ipynb  evaluate.py  lgbm_utils.py  test_cnn_utils.py  test_lgbm_utils.py  test_train.py  test_utils.py  train.py  utils.py
src/auto_trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/auto_trader/common/: common_config.py  common_utils.py  test_common_utils.py  test_utils.py  utils.py
src/auto_trader/data/: cleanse.py  collect.py  config.py  get_raw.py  preprocess.py  test_cleanse.py  test_utils.py  utils.py  データ特徴.md
src/auto_trader/data/tests/: test_cleanse.py  test_collect.py
src/auto_trader/modeling/: cnn_utils.py  config.py  data.py  evaluate.py  lgbm_utils.py  model.py  order.py  strategy.py  test_cnn_utils.py  test_data.py  test_evaluate.py  test_lgbm_utils.py  test_utils.py  train.py  utils.py
src/auto_trader/modeling/tests/: test_data.py  test_evaluate.py  test_model.py  test_order.py  test_strategy.py  test_train.py
src/data/: .gitignore  get_raw.py  データ取得方法.md
src/modeling/: config.py  evaluate.py  lgbm_utils.py  train.py
train/: Untitled.ipynb  config.py  create_features-1.ipynb  create_features-3.ipynb  test_utils.py  train.py  train_model-1.ipynb  train_model.py  utils.py
