[project]
name = "auto-trader"
version = "0.1.0"
dependencies = [
    "google-cloud-secret-manager", # to be deleted
    "google-cloud-storage", # to be deleted
    "lightgbm >= 3.3.2", # to be deleted
    "neptune-client",
    "numpy",
    "hydra-core", # to be deleted
    "pandas",
    "pyarrow",
    "fastparquet",
    "torch",
    "scikit-learn", # to be deleted
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pyproject-flake8",
    "mypy",
    "pytest",
    "pytest-mock", # to be deleted?
]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
