[project]
name = "auto-trader"
version = "0.1.0"
dependencies = [
    "neptune",
    "numpy",
    "pandas",
    "omegaconf",
    "hydra-core",
    "pyarrow",
    "fastparquet",
    "torch",
    "lightning",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pyproject-flake8",
    "mypy",
    "pytest",
    "pytest-mock", # to be deleted?
]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
