[project]
name = "auto-trader"
version = "0.1.0"
dependencies = [
    "neptune",
    "numpy",
    "pandas",
    "omegaconf",
    "hydra-core",
    "pyarrow",
    "fastparquet",
    "torch",
    "lightning",
    "scikit-learn",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pyproject-flake8",
    "mypy",
    "pytest",
    "pytest-mock", # to be deleted?
    "pandas-stubs",
    "types-Pillow",
    "types-PyYAML",
    "types-colorama",
    "types-protobuf",
    "types-regex",
    "types-setuptools",
    "types-tabulate",
    "types-tqdm",
]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "neptune",
    "sklearn.*",
]
ignore_missing_imports = true
